# Infotainment-System

./: CMakeLists.txt  README.md  src_gen_cmd.sh
fidl/HeadUnit/: HeadUnit.fdepl  HeadUnit.fidl
fidl/IVI/: IVI.fdepl
fidl/PiController/: PiController.fdepl  PiController.fidl
fidl/PiSender/: PiSender.fdepl  PiSender.fidl
reboot_script/: reboot_can_sender.sh  reboot_head_unit.sh  reboot_ivi_compositer.sh  reboot_pdc_unit.sh  reboot_pi_controller.sh  reboot_pi_controller_sender.sh
src-gen/PiController/core/common/v1/commonapi/: PiController.hpp
src-gen/PiController/core/proxy/v1/commonapi/: PiControllerProxy.hpp  PiControllerProxyBase.hpp
src-gen/PiController/core/skel/v1/commonapi/: PiControllerStubDefault.hpp
src-gen/PiController/core/stub/v1/commonapi/: PiControllerStub.hpp
src-gen/PiController/someip/common/v1/commonapi/: PiControllerSomeIPDeployment.cpp  PiControllerSomeIPDeployment.hpp
src-gen/PiController/someip/proxy/v1/commonapi/: PiControllerSomeIPProxy.cpp  PiControllerSomeIPProxy.hpp
src-gen/PiController/someip/stub/v1/commonapi/: PiControllerSomeIPStubAdapter.cpp  PiControllerSomeIPStubAdapter.hpp
src-gen/PiSender/core/common/v1/commonapi/: PiSender.hpp
src-gen/PiSender/core/proxy/v1/commonapi/: PiSenderProxy.hpp  PiSenderProxyBase.hpp
src-gen/PiSender/core/skel/v1/commonapi/: PiSenderStubDefault.hpp
src-gen/PiSender/core/stub/v1/commonapi/: PiSenderStub.hpp
src-gen/PiSender/someip/common/v1/commonapi/: PiSenderSomeIPDeployment.cpp  PiSenderSomeIPDeployment.hpp
src-gen/PiSender/someip/proxy/v1/commonapi/: PiSenderSomeIPProxy.cpp  PiSenderSomeIPProxy.hpp
src-gen/PiSender/someip/stub/v1/commonapi/: PiSenderSomeIPStubAdapter.cpp  PiSenderSomeIPStubAdapter.hpp
src/CANSENDER/: CANSender.cpp  CANSenderStublmpl.cpp  CANSenderStublmpl.hpp  DistanceBuffer.c  DistanceBuffer.h  ReadCANThread.c  ReadCANThread.h  SendSomeipThread.cpp  SendSomeipThread.hpp  SpeedBuffer.c  SpeedBuffer.h
src/CONTROLLER/: PiController.cpp  PiControllerStublmpl.cpp
src/HeadUnit/: CarLoader.qml  CarModel.qml  CarView.qml  DashboardModel.qml  HeadUnit.cpp  HeadUnitQtClass.cpp  HeadUnitQtClass.hpp  HeadUnitSenderClass.cpp  HeadUnitSenderClass.hpp  HeadUnitStubImpl.cpp  HeadUnitStubImpl.hpp  IconButton.qml  InstrumentClusterQtClass.cpp  InstrumentClusterQtClass.hpp  InstrumentClusterSenderClass.cpp  InstrumentClusterSenderClass.hpp  InstrumentClusterStubImpl.cpp  InstrumentClusterStubImpl.hpp  RPMGauageStyle.qml  SpeedGauageStyle.qml  ValueSource.qml  main.cpp  main.qml  main2.qml  qml.qrc  scenehelper.cpp  scenehelper.h
src/HeadUnit/Infotainment/: infotainment.qml
src/HeadUnit/Infotainment/Parts/BottomBar/: BottomBar.qml  HVAC.qml  VolumeControl.qml
src/HeadUnit/Infotainment/Parts/Icons/: Icon.qml  IconButton.qml  LaunchButton.qml  LaunchPad.qml
src/HeadUnit/Infotainment/Parts/LeftScreen/: LeftScreen.qml
src/HeadUnit/Infotainment/Parts/RightScreen/: NavigationScreenHelper.qml  NavigationSearchBox.qml  RightScreen.qml
src/HeadUnit/qml/: CircularGaugeBasic.qml  RPMGauageStyle.qml  SpeedGauageStyle.qml  main.qml
src/IPCMANAGER/: IPCManager.cpp  IPCManagerSenderClass.cpp  IPCManagerSenderClass.hpp  IPCManagerStubImpl.cpp  IPCManagerStubImpl.hpp  IPCManagerStublmpl.cpp  IPCManagerStublmpl.hpp  PiController.cpp  PiController.hpp
src/IPCManager/: IPCManagerSenderClass.cpp  IPCManagerSenderClass.hpp  IPCManagerStubImpl.cpp  IPCManagerStubImpl.hpp
src/IVI/: IVICompositor.cpp  IVICompositorQtClass.cpp  IVICompositorQtClass.hpp  IVICompositorStubImpl.cpp  IVICompositorStublmpl.hpp
src/IVI/qml/: main.qml
src/PDCUNIT/: PDCUnit.cpp  PDCUnitQtClass.cpp  PDCUnitQtClass.hpp  PDCUnitSenderClass.cpp  PDCUnitSenderClass.hpp  PDCUnitStubImpl.cpp  PDCUnitStubImpl.hpp  qml.qrc
src/PiController/: ControllerClass.cpp  ControllerClass.hpp  PiControllerStublmpl.hpp
src/PiSender/: PiClass.cpp  PiClass.hpp  PiControllerSender.cpp  PiControllerSenderStublmpl.cpp  PiControllerSenderStublmpl.hpp
src/SPEAKER/: DataBuffer.cpp  DataBuffer.hpp  RemoteSpeaker.cpp  RemoteSpeakerStublmpl.cpp  RemoteSpeakerStublmpl.hpp
